# NAICS-Classification

./: .gitignore  README.md  config.yaml  frontend.py  pyproject.toml  test.ipynb
app/: NAICS.json  abstractclasses.py  gliner.py  main.py  prediction.py  query_vectordb.py  scrape.py  vectordb.py
