[tool.poetry]
name = "temp"
version = "0.1.0"
description = ""
authors = ["Athe-kunal <athekunal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gliner = "^0.2.7"
chromadb = "^0.5.3"
sentence-transformers = "^3.0.1"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
